app/assets/stylesheets/layout/banner/overlay_pieces/notices_bell.css
.notices-bell {
  position: relative;
  line-height: 33px;
  text-decoration: none;
  font-size: 1.25em;
  margin-right: 20px;
  margin-left: 10px;
  float: left;
}
.notices-bell span {
  position: absolute;
  top: -3px;
  left: 60%;
  display: block;
  background: var(--notification-bobber-fill);
  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
  color: var(--content-background);
  border-radius: 4px;
  font-size: 10px;
  padding: 3px;
  line-height: 1em;
  vertical-align: middle;
  animation: 1s bobben 0s 1;
  -webkit-animation: 1s bobben 0s 1;
}
.notices-bell span[data-count="0"] {
  display: none;
}
.notices-bell span.invert {
  top: auto;
  bottom: -3px;
  margin-bottom: 0 !important;
  animation-delay: 0.1s;
  -webkit-animation-delay: 0.1s;
}
.notices-bell span.vert {
  left: auto;
  right: 60%;
  animation-delay: 0.15s;
  -webkit-animation-delay: 0.15s;
}
.notices-bell span.invert.vert {
  animation-delay: 0.2s;
  -webkit-animation-delay: 0.2s;
}

